--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 
         <script type="module" src="/src/index.jsx"></script>
     </head>
-    <body></body>
+    <body>
+        <main class="x mandatory-scroll-snapping">
+        </main>
+    </body>
 </html>
