--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/icon.svg">
+        <link rel="icon" type="image/svg+xml" href="/svg/favicon.svg" />
         <meta 
             name="viewport" 
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" 
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link crossorigin rel="preconnect" href="https://fonts.gstatic.com" />
+        <link 
+            href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+            rel="stylesheet"
         />
 
         <title>algoComp 2025</title>
@@ -13,7 +19,6 @@
         <script type="module" src="/src/index.jsx"></script>
     </head>
     <body>
-        <main class="x mandatory-scroll-snapping">
-        </main>
+        <main class="x mandatory-scroll-snapping"></main>
     </body>
 </html>
