--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <script type="module" src="/src/index.jsx"></script>
     </head>
     <body>
-        <main class="x mandatory-scroll-snapping"></main>
+        <main></main>
     </body>
 </html>
