--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" 
         />
 
+        <link 
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+        />
+
         <title>algoComp 2025</title>
 
         <script type="module" src="/src/index.jsx"></script>
