footer: copyright notice

--- a/public/kvkk.html
+++ b/public/kvkk.html
@@ -161,7 +161,7 @@
         </p>
         
         <div>
-            Copyright ITU ACM © 2023
+            Copyright © 2025 ITU ACM
             <br />
             <a href="https://opensource.org/license/mit">The MIT License</a>
         </div>
