kvkk adjusted, Footer source code link adjusted.

--- a/public/kvkk.html
+++ b/public/kvkk.html
@@ -20,27 +20,11 @@
         <a class="homepage" href="/">&lt; ana sayfa</a>
         <h1>KVKK Aydınlatma Metni</h1>
         <p>
-            İşbu Aydınlatma Metni, İstanbul Teknik Üniversitesi Association for
-            Computing Machinery Kulübü (bundan sonra “Kulüp” olarak 
-            anılacaktır.) tarafından Kulüp’ün algoComp’23 (bundan sonra 
-            “Etkinlik” olarak anılıcaktır.) etkinliğinin katılımcılarının
-            6698 sayılı Kişisel Verilerin Korunması Kanunu (bundan sonra
-            “Kanun” olarak anılıcaktır.) kapsamında kişisel verilerinin Kulüp
-            ve sponsor şirketler olan ELİPTİK YAZILIM VE TİCARET ANONİM 
-            ŞİRKETİ, TÜRK HAVACILIK VE UZAY SANAYİİ ANONİM ŞİRKETİ ve SOFTTECH
-            YAZILIM TEKNOLOJİLERİ ARAŞTIRMA GELİŞTİRME VE PAZARLAMA TİCARET
-            ANONİM ŞİRKETİ (bundan sonra “Şirketler” olarak anılacaktır.) 
-            tarafından işlenmesine ilişkin olarak aydınlatılması amacıyla 
-            hazırlanmıştır.
+            İşbu Aydınlatma Metni, İstanbul Teknik Üniversitesi Association for Computing Machinery Kulübü (bundan sonra “Kulüp” olarak anılacaktır.) tarafından Kulüp’ün algoComp’25 (bundan sonra “Etkinlik” olarak anılıcaktır.) etkinliğinin katılımcılarının 6698 sayılı Kişisel Verilerin Korunması Kanunu (bundan sonra “Kanun” olarak anılıcaktır.) kapsamında kişisel verilerinin Kulüp ve sponsor şirketler olan Paribu Kripto Varlık Alım Satım Platformu A.Ş. ve Solid-ICT Yazılım Danışmanlık ve Bilişim Tek. Tic. A.Ş. (bundan sonra “Şirketler” olarak anılacaktır.) tarafından işlenmesine ilişkin olarak aydınlatılması amacıyla hazırlanmıştır.
         </p>
         <h2>1. Veri Sorumlusu</h2>
         <p>
-            6698 sayılı Kişisel Verilerin Korunması Kanunu uyarınca, kişisel
-            verileriniz; “Veri Sorumlusu” olarak ITU ACM Student Chapter 
-            Öğrenci Kulübü tarafından aşağıda açıklanan kapsamda toplanacak,
-            işlenebilecektir ve mevzuatın izin verdiği hallerde ve/veya
-            işlendikleri amaçla sınırlı olarak 3. taraflara açıklanabilir/
-            aktarılabilir.
+            6698 sayılı Kişisel Verilerin Korunması Kanunu uyarınca, kişisel verileriniz; “Veri Sorumlusu” olarak ITU ACM Student Chapter Öğrenci Kulübü tarafından aşağıda açıklanan kapsamda toplanacak ,işlenebilecektir ve mevzuatın izin verdiği hallerde ve/veya işlendikleri amaçla sınırlı olarak 3. taraflara açıklanabilir/aktarılabilir.
         </p>
         <h2>2. Etkinlik için Hangi Kişisel Verileriniz İşlenir?</h2>
         <p>
@@ -50,15 +34,9 @@
         </p>
         <h2>3. Kişisel Verileriniz Nasıl İşlenir ve Aktarılır?</h2>
         <p>
-            Toplanan kişisel verileriniz yarışma faaliyetinin yürütülmesi 
-            amacıyla Vihyper Veri Merkezi Hizmetleri (bundan sonra “Platform” 
-            olarak anılacaktır.) yurt içindeki sunucularında toplanır, işlenir
-            ve saklanır. Kişisel verilerinizi Etkinlik’i düzenlemek amacıyla
-            işleyen Platform, kişisel verilerinizin korunmasına ilişkin tüm
-            teknik ve hukuki tedbirler almaktadır. Platformun’un kişisel veri
-            koruma politikalarına 
-            <a href="https://vihyper.net/kisisel-veriler-ve-genel-gizlilik-sozlesmesi">
-                https://vihyper.net/kisisel-veriler-ve-genel-gizlilik-sozlesmesi
+            Toplanan kişisel verileriniz, kendi rızanız ile tarafımıza sunduğunuz bilgiler doğrultusunda, yarışma faaliyetinin yürütülmesi amacıyla Google LLC (bundan sonra “Platform” olarak anılacaktır) tarafından yurt içi ve/veya rızanız dahilinde yurt dışındaki sunucularında toplanır, işlenir ve saklanır. Kişisel verilerinizi etkinliği düzenlemek amacıyla işleyen Platform, kişisel verilerinizin korunmasına ilişkin tüm teknik ve hukuki tedbirleri almaktadır. Platformun kişisel veri koruma politikalarına 
+            <a href=" https://policies.google.com/privacy">
+                https://policies.google.com/privacy
             </a> adresinden ulaşabilirsiniz.
         </p>
         <h2>4. Kişisel Verileriniz Hangi Amaçla Toplanır ve Kimlere Aktarılır?</h2>
@@ -71,11 +49,7 @@
             paylaşılmamaktadır.
         </p>
         <p>
-            Kulüp tarafından toplanan kişisel verileriniz; KVK Kanunu’nda 
-            belirtilen kişisel veri işleme şartlarından kanunlarda öngörme,
-            hukuki yükümlülüğün yerine getirilmesi ve sözleşmenin ifası hukuki
-            sebepleri kapsamında ve işbu dokümanda belirtilmiş amaçlarla
-            sınırlı olarak, açıkladığımız Şirketler’e aktarılacaktır.
+            Kulüp olarak düzenlediğimiz Etkinlik’e katılımının sağlanması, tarafımızca Etkinlik’in tertibi, kişi sayılarının belirlenmesi ve bunların sonucunda kazandığınız ürün, hizmetler, iş imkanları ve ödüllerden sizleri faydalandırmak amacıyla işlenecektir. Söz konusu kişisel verilerinizin alakasız ve yetkisiz 3.kişi veya kurumlarca paylaşılmamaktadır.
         </p>
         <h2>5. Kişisel verilerin elde edilme yöntemleri ve hukuki sebebi</h2>
         <p>
@@ -86,24 +60,14 @@
             gerçekleştiği algocomp.ituacm.com üzerinden toplanılır.
         </p>
         <p>
-             Kişisel verileriniz, Kulüp ve Kulüp adına veri işleyen gerçek ya
-             da tüzel kişiler tarafından; yukarıda sayılan amaçların
-             gerçekleştirilmesi doğrultusunda, KVK Kanunu’nun 5. maddesinde
-             belirtilen; kanunlarda açıkça öngörülmesi, bir sözleşmenin
-             kurulması veya ifasıyla doğrudan doğruya ilgili olması kaydıyla,
-             sözleşmenin taraflarına ait kişisel verilerin işlenmesinin gerekli
-             olması, veri sorumlusunun hukuki yükümlülüğünü yerine
-             getirebilmesi için zorunlu olması, bir hakkın tesisi, kullanılması
-             veya korunması için veri işlemenin zorunlu olması, ve ilgili
-             kişinin temel hak ve özgürlüklerine zarar vermemek kaydıyla, veri
-             sorumlusunun meşru menfaatleri için veri işlenmesinin zorunlu
-             olması, hukuki sebeplerine dayanılarak toplanmakta ve
-             işlenmektedir.
+            Kişisel verileriniz, Kulüp ve Kulüp adına veri işleyen gerçek ya da tüzel kişiler tarafından; yukarıda sayılan amaçların gerçekleştirilmesi doğrultusunda, KVK Kanunu’nun 5. maddesinde belirtilen; kanunlarda açıkça öngörülmesi, bir sözleşmenin kurulması veya ifasıyla doğrudan doğruya ilgili olması kaydıyla, sözleşmenin taraflarına ait kişisel verilerin işlenmesinin gerekli olması, veri sorumlusunun hukuki yükümlülüğünü yerine getirebilmesi için zorunlu olması, bir hakkın tesisi, kullanılması veya korunması için veri işlemenin zorunlu olması, ve ilgili kişinin temel hak ve özgürlüklerine zarar vermemek kaydıyla, veri sorumlusunun meşru menfaatleri için veri işlenmesinin zorunlu olması, hukuki sebeplerine dayanılarak toplanmakta ve işlenmektedir.
+
         </p>
         <h2>6. Kişisel Verileriniz Ne Zamana Kadar Saklanacaktır?</h2>
-        <p>
+        <p>Kişisel verileriniz, size bildirilen amaçlar ve kapsam dışında kullanılmamak kaydıyla gerekli tüm bilgi güvenliği tedbirleri de alınarak 31 Aralık 2025 tarihine kadar saklanacak ve işlenecektir. Bu süre sona erdiğinde, kişisel verileriniz silinme, yok edilme ya da anonimleştirme yöntemleri ile tarafımızca veri akışlarından çıkarılacaktır.</p>
+        <h2>
         KVKK ve ilgili mevzuat kapsamında kişisel verilerinize ilişkin olarak;
-        </p>
+        </h2>
 
         <ul>
             <li>
